--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 
 /* header style start  */
 .header{
+    width: 80%;
+    margin: 0 auto;
     background-color: rgb(239, 243, 246);
     display: flex; 
     justify-content: space-between;
@@ -50,6 +52,8 @@ main file start
 
 .brand-details{
     background-color: rgb(239, 243, 246);
+    width: 80%;
+    margin: 0 auto;
 
 }
 .details-title{
@@ -79,14 +83,16 @@ main file start
     font-size: 18px;
 }
 .banner .image{
-    width: 70%;
-    height: 400px;
-    margin: 30px;
+    width: 80%;
+    /* height: 400px; */
+    margin: 0 auto;
 }
 
 /* Our  feature section style start  */
 
 .our-features{
+    width: 80%;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -125,8 +131,8 @@ main file start
 .love-enjoy{
     display: flex;
     flex-direction: row;
-    margin: 20px;
-    padding: 30px;
+    width: 80%;
+    margin: 0 auto;
 }
 .experiens{
     text-align: center;
@@ -139,7 +145,7 @@ main file start
     left: 50px;
 }
 .exp{
-    font-size: 14px;
+    font-size: 22px;
 }
 .version-name{
     /* font-size: 29px; */
@@ -164,13 +170,18 @@ main file start
 .version-count{
     margin-top: 100px;
 }
-/* .figure img{
-} */
+.figure img{
+    width: 100%;
+    height: 100%;
+}
 
 
 /* something other section style  */
 
 .somethig-others{
+    width: 80%;
+    margin: 0 auto;
+
 
 }
 .something-others h1{
@@ -200,6 +211,7 @@ main file start
     padding: 30px;
     border: 1px solid black;
     margin: 16px;
+    transform: rotate(360deg);
 }
 .box:hover{
     background-color: green;
@@ -209,7 +221,7 @@ main file start
     height: 300px;
     text-align: center;
     transition: 1.5rem;
-    transition-delay: 1s;
+    
 }
 .box h3{
     font-size: 30px;
@@ -224,7 +236,12 @@ main file start
 
 /* sponser brand design style  */
 
-
+.sponsor-brand{
+    width: 70%;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+}
 .sponsors{
     display: grid;
     grid-template-columns: repeat(5,1fr);
@@ -248,14 +265,18 @@ main file start
     height: 40px;
     width: 90px;
 }
+.sponsor{
+    margin: 0 auto;
+}
 
 /* extra section style  */
 
 .tour{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    width: 80%;
     grid-gap: 30px;
-    margin: 10px;
+    margin: 0 auto ;
 }
 .tour-place{
     background-color: rgb(225, 231, 231);
@@ -289,12 +310,12 @@ main file start
 
 /* footer style  */
 .footer{
+    width: 80%;
     background-color: rgb(203, 169, 124);
-    height: 40px;
-    margin: 79px 30px;
+    height: 50px;
+    margin: 40px auto;
     font-size: 10px;
     text-align: center;
-    margin-top: 50px;
     padding-top: 10px;
 
 }
@@ -375,6 +396,9 @@ media quaries start
         left: 180px;
         top: 30px;
     }
+    .exp{
+        font-size: 23px;
+    }
         /*  some effect section start */
 
     .some-facts{
@@ -393,7 +417,8 @@ media quaries start
 
     .sponsors{
         display: grid;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(1,1fr);
+        grid-gap: 50px;
         justify-content: center;
         align-items: center;
     }
@@ -406,9 +431,9 @@ media quaries start
 
 
     /*  footer start*/
-    .footer{
+    /* .footer{
         width: 100%;
-    }
+    } */
 
 }
 
