--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
     font-weight: 600;
     text-decoration: none;
     font-size: 17px;
-    padding:80px ;
+    padding:30px ;
 }
 
 /* --------------
@@ -79,11 +79,11 @@ main file start
     padding: 15px;
     background-color: orange;
     color: black;
-    margin-top: 40px;
+    margin:79px 0 ;
     font-size: 18px;
 }
 .banner .image{
-    width: 80%;
+    width: 100%;
     /* height: 400px; */
     margin: 0 auto;
 }
@@ -109,7 +109,6 @@ main file start
     font-weight: 400px;
     color: gray;
     margin-bottom: 10px;
-    border-left: 3px solid black;
     padding-left:10px ;
 
 }
@@ -195,6 +194,8 @@ main file start
 }
 .there{
     font-size: 50px;
+    margin-top: 0px;
+    text-align: left;
 }
 .some-facts{
     display:grid;
@@ -215,13 +216,11 @@ main file start
 }
 .box:hover{
     background-color: green;
-    border-radius: 50%;
     cursor: pointer;
-    width: 300px;
-    height: 300px;
+    width: 180px;
+    height: 230px;
     text-align: center;
     transition: 1.5rem;
-    
 }
 .box h3{
     font-size: 30px;
@@ -331,10 +330,9 @@ media quaries start
         margin: 0;
     }
 /* header responsive start  */
-    .header{
+    /* .header{
         width: 100%;
-        background-color: rgb(241, 234, 221);
-    }
+    } */
     .logo{
 
         font-size: 30px;
@@ -347,28 +345,30 @@ media quaries start
         flex-direction: column;
     }
     .navbar li a {
-        font-weight: 600;
-        font-size: 26px;
+        font-weight: 200;
+        font-size: 17px;
         position: relative;
+        left: 30px;
     }
 
     /* first section brand details responve start  */
+    
     .details-title-heding{
         font-size: 45px;
         font-weight: 700px;   
     }
-    .banner img{
+    /* .banner img{
         width: 100%;
-    }
+    } */
 
-    .brand-details{
+    /* .brand-details{
        width: 100vw;
-    }
-    .banner .image{
+    } */
+    /* .banner .image{
         width:100%;
         height: 400px;
         margin: 30px;
-    }
+    } */
 
     /* our feature section start */
     .our-features{
